<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">
        <ImageView
            android:id="@+id/img_inv_list"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/label_image"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tv_stock_code"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_stock_code"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textAlignment="center"/>
    </LinearLayout>

</android.support.v7.widget.CardView>