<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name_detail"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_version"
        style="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_description"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        style="@style/Base.TextAppearance.AppCompat.Small"/>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="end"
        android:text="@string/label_close"
        style="@style/Base.Widget.AppCompat.ActionButton"/>
</LinearLayout>